# AI-Recruitment-Suite

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: python-app.yml
agents/: cv_chat_agent.yaml  document_agent.yaml  document_info_extractor.yaml  formatter_agent.yaml  ibm_consulting_recruitment_agent.yaml  processor_agent.yaml  recruitment_analyzer.yaml  recruitment_comparison_agent.yaml  recruitment_manager.yaml  recruitment_orchestrator.yaml  simple_evaluator_agent.yaml
config/: __init__.py  mcp_gateway.yml
docs/: README.md  processor_agent.md  recruitment_analyzer.md  recruitment_manager.md  recruitment_orchestrator.md  simple_evaluator_agent.md
scripts/: start.sh
scripts/ubuntu/: install_docker.sh  install_watsonx_pc.sh
tests/: __init__.py  conftest.py  test_db_manager.py  test_evaluation_tools.py
tools/: __init__.py  db_manager.py  db_manager_enhanced.py  db_retrieval.py  evaluation_tools.py
